# joguinho

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  joguinho-dev-1.rockspec  main.go  main.lua  sqlc.yaml
.github/workflows/: docker-image.yaml  test-rust-aplication.yaml
config/: environment.go
database/sqlite/: connection.go  db.go  functions.go  models.go  saves.sql.go
database/sqlite/migration/: saves_migration.sql
database/sqlite/query/: saves.sql
game/menu/: endOfContent.go  initialization.go  loadGame.go  mainMenu.go  newGame.go
game/utils/: cleanScreen.go  loading.go  printLogo.go  saveGame.go
images/: logo.txt
infra/database/sqlite/: create.db.sql  db.lua
migrations/2023-04-08-155320_saves/: down.sql  up.sql
schema/: gameContext.go
src/: db.rs  introduction.rs  main.rs  menu.rs  models.rs  ops.rs  schema.rs
src/database/: README.md
typer/: typer.go
