[package]
name = "joguinho"
version = "0.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
dialoguer = "0.10.3"
diesel = { version = "1.4.7", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
indicatif = "0.17.3"
termion = "2.0.1"
